стилизация  our services

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     </section>
     <section class="services">
       <h2 class="section-title">Our Services</h2>
+      <div class="services-img"></div>
       <p class="services__description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
         accusantium doloremque laudantium, totam rem aperiam</p>
       <ul class="services__list">
