--- a/index.html
+++ b/index.html
@@ -137,35 +137,50 @@
       </ul>
     </section>
     <section class="services">
-      <h2 class="section-title">Our Services</h2>
-      <div class="services-img"></div>
-      <p class="services__description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-        accusantium doloremque laudantium, totam rem aperiam</p>
+      <div class="services-group">
+        <h2 class="section-title">Our Services</h2>
+        <div class="services-img"></div>
+        <p class="services__description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+          accusantium doloremque laudantium, totam rem aperiam</p>
+      </div>
       <ul class="services__list">
-        <li class="services__item">
-          <h3 class="services__title">Hair cut</h3>
-          <p class="services__text">At vero eos et accusamus et iusto odio
-            dignissimos ducimus qui blanditiis praesentium
-            voluptatum deleniti atque corrupti quos</p>
-        </li>
-        <li class="services__item">
-          <h3 class="services__title">Hair wash</h3>
-          <p class="services__text">At vero eos et accusamus et iusto odio
-            dignissimos ducimus qui blanditiis praesentium
-            voluptatum deleniti atque corrupti quos</p>
-        </li>
-        <li class="services__item">
-          <h3 class="services__title">Hair styling</h3>
-          <p class="services__text">At vero eos et accusamus et iusto odio
-            dignissimos ducimus qui blanditiis praesentium
-            voluptatum deleniti atque corrupti quos</p>
-        </li>
-        <li class="services__item">
-          <h3 class="services__title">Shave</h3>
-          <p class="services__text">At vero eos et accusamus et iusto odio
-            dignissimos ducimus qui blanditiis praesentium
-            voluptatum deleniti atque corrupti quos</p>
-        </li>
+        <div class="services__item-group">
+          <li class="services__item">
+            <h3 class="services__title">Hair cut</h3>
+            <p class="services__text">At vero eos et accusamus et iusto odio
+              dignissimos ducimus qui blanditiis praesentium
+              voluptatum deleniti atque corrupti quos</p>
+
+          </li>
+          <br>
+          <br>
+          <br>
+          <li class="services__item">
+            <h3 class="services__title">Hair wash</h3>
+            <p class="services__text">At vero eos et accusamus et iusto odio
+              dignissimos ducimus qui blanditiis praesentium
+              voluptatum deleniti atque corrupti quos</p>
+          </li>
+        </div>
+
+        <div class="services__item-group">
+          <li class="services__item">
+            <h3 class="services__title">Hair styling</h3>
+            <p class="services__text">At vero eos et accusamus et iusto odio
+              dignissimos ducimus qui blanditiis praesentium
+              voluptatum deleniti atque corrupti quos</p>
+          </li>
+          <br>
+          <br>
+          <br>
+          <li class="services__item">
+            <h3 class="services__title">Shave</h3>
+            <p class="services__text">At vero eos et accusamus et iusto odio
+              dignissimos ducimus qui blanditiis praesentium
+              voluptatum deleniti atque corrupti quos</p>
+          </li>
+        </div>
+
       </ul>
     </section>
     <section class="appointment">
