--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
         </li>
         <li class="page-header__info-item">
-          <a class="page-header__info-link" href="#"></a>
+          <a class="page-header__info-link page-header__info-link-search" href="#"></a>
         </li>
       </ul>
 
@@ -231,7 +231,7 @@
     </section>
     <section class="barbers">
       <h2 class="section-title">Our Barbers</h2>
-      <p class="barbers__description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+      <p class="barbers__description ">Sed ut perspiciatis unde omnis iste natus error sit voluptatem
         accusantium doloremque laudantium, totam rem aperiam</p>
       <ul class="barbers__list">
         <li class="barbers__item">
