--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
       </ul>
     </div>
   </footer>
-  <section class="appointment modal modal--hide">
+  <section class="appointment modal ">
     <div class="container">
       <h2 class="section-title section-title--white">Make An Appointment</h2>
       <div class="section-img"></div>
@@ -502,7 +502,8 @@
         </div>
         <textarea class="appointment__message" name="message" id="message" cols="30" rows="10"
           placeholder="Message"></textarea>
-        <button class="appointment__btn" type="submit">Make An Appointment</button>
+        <button class="appointment__btn" type="submit">Make An Appointment</button>-
+        <button class="appointment__btn appointment__btn-reset" type="reset">Clear Form</button>
       </form>
     </div>
   </section>
